# rust-rest-boilerplate

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: ci.yml  coverage.yml
migrations/: 20230314014800_users.sql  20230317062307_user_sessions.sql  20230317070822_add_user_deletedAt.sql  20230317072520_add_session_user_agent.sql  20230323025026_categories.sql  20230323025913_sessions.sql  20230323031251_expenses.sql  20230323032144_budgets.sql
src/: config.rs  lib.rs  logger.rs  main.rs  mocks.rs
src/apis/: mod.rs  user_endpoints.rs
src/controllers/: mod.rs  user_endpoints.rs
src/database/: connection.rs  mod.rs
src/database/budget/: mod.rs  query.rs  repository.rs
src/database/category/: mod.rs  model.rs  query.rs  repository.rs
src/database/expense/: query.rs  repository.rs
src/database/session/: mod.rs  model.rs  query.rs  repository.rs
src/database/user/: mod.rs  model.rs  query.rs  repository.rs
src/dto/: mod.rs  session_dto.rs  user_dto.rs
src/middlewares/: mod.rs  request_validation_middleware.rs  required_authentication_middleware.rs
src/queries/: mod.rs  session_query.rs
src/repositories/: mod.rs  session_repository.rs  user_repository.rs
src/server/: error.rs  mod.rs
src/server/api/: budget_api.rs  category_api.rs  category_controller.rs  expense_api.rs  mod.rs  user_api.rs  user_controller.rs
src/server/dtos/: budget_dto.rs  category_dto.rs  expense_dto.rs  mod.rs  session_dto.rs  user_dto.rs
src/server/extractors/: mod.rs  required_authentication_extractor.rs  session_extractor.rs  user_agent_extractor.rs  validation_extractor.rs
src/server/middlewares/: deserialize_session_middleware.rs  get_user_agent_middleware.rs  mod.rs  request_validation_middleware.rs  required_authentication_middleware.rs
src/server/services/: budget_services.rs  category_services.rs  expense_services.rs  mod.rs  seed_services.rs  session_services.rs  user_services.rs
src/server/utils/: argon_utils.rs  jwt_utils.rs  mod.rs
src/services/: mod.rs  session_service.rs  user_service.rs
src/utils/: argon_util.rs  connection_pool.rs  errors.rs  jwt_utils.rs  mod.rs  password_util.rs
tests/: categories_service.rs  users_service_signin_user_should.rs  users_service_signup_user_should.rs
