[package]
name = "rust_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
axum = { version = "0.6.10", features = ["tower-log"] }
clap = { version = "4.1.8", features = ["derive","env"] }
dotenvy = "0.15.6"
rust-argon2 = "1.0.0"
serde = { version = "1.0.155", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "offline"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tracing = "0.1.37"
validator = { version = "0.16.0", features = ["derive"] }
