[package]
name = "rust_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
axum = { version = "0.6.10", features = ["tower-log"] }
axum-extra = { version = "0.7.1", features = ["cookie", "cookie-signed"] }
clap = { version = "4.1.8", features = ["derive","env"] }
dotenvy = "0.15.6"
http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14.25", features = ["full"] }
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
rust-argon2 = "1.0.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "offline"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = {version="0.4.0", features = ["trace", "cors"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
validator = { version = "0.16.0", features = ["derive"] }
